# ek_spel

./: .gitignore  EKspel2021.xls  README.md  config.py  flask_app.py  flask_model.py  main.py  model.py  poule.py  pyproject.toml  ranking.py  requirements.txt  session.py  test.py  update.py  upload.py
invullijsten/: Invullijst WK Spel 2022.xlsx  _Invullijst_EK2021 (test).xlsx
invullijsten/2022/: Andre hazes.xlsx
invullijsten/2024/: Andre Hazes.xlsx  _Invullijst EK Spel 2024.xlsx
invullijsten/2026/: Andre Hazes.xlsx  _Invullijst.xlsx  _invullijst WK2026.xlsx
programma/: wk-2022-speelschema.xlsx
programma/2021/: EKspel2021.xls
programma/2022/: final_mapper.json
programma/2024/: ek-2024-speelschema.xlsx  final_mapper.json
programma/2026/: final_mapper.json  wk-2026-speelschema.xlsx
scripts/: run.cmd
src/wkspel/: config.py  dump.py  excel.py  main.py  model.py  poule.py  ranking.py  test.py  update.py  upload.py
