[project]
name = "wkspel2022"
description = "Backend wk spel applicatie"
readme = "README.md"
version = "0.8.1"
authors = [
    { name = "Roel de Vries", email = "rwdevries89@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "SQLAlchemy~=1.4.0",
    "pandas~=1.5.0",
    "xlrd~=2.0.0",
    "tabulate~=0.9.0",
    "openpyxl~=3.0.0",
    "xlrd==2.0.1",
    "python-dotenv~=0.21.0"
]

[project.optional-dependencies]
dev = []

[project.scripts]
wkspel2022 = "wkspel.main:main"
ekspel2024 = "wkspel.main:main"

[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools ~=64.0.0",
    "wheel ~=0.38.1",
]

[tool.distutils.bdist_wheel]
universal = true
