[build-system]
build-backend = "uv_build"
requires = [ "uv-build>=0.11.6,<0.12" ]

[project]
name = "wkspel"
version = "0.9.0"
description = "Backend wk spel applicatie"
readme = "README.md"
authors = [ { name = "Roel de Vries", email = "rwdevries89@gmail.com" } ]
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "openpyxl==3.1.5",
  "pandas==2.3.3",
  "python-dotenv==1.2.2",
  "sqlalchemy==1.4.54",
  "six==1.17.0",
  "tabulate==0.10",
  "xlrd==2.0.2"
]
optional-dependencies.dev = [ "pyproject-fmt==2.21" ]
scripts.ekspel2024 = "wkspel.main:main"
scripts.wkspel2022 = "wkspel.main:main"
